modification du frontend

--- a/FrontEnd/railridebmx-frontend/src/Components/Cart/Cart.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Cart/Cart.css
@@ -4,7 +4,7 @@
   width: 100vw;
   height: 150vh;
 }
-.title {
+.cartpage-title {
   color: #000;
   font-family: "Font/Heebo-Black.ttf", sans-serif;
   font-size: 35px;
@@ -155,7 +155,7 @@
   margin-left: 5px;
   margin-bottom: 5px;
 }
-hr {
+.cart-hr {
   margin-left: 28%;
   margin-right: 40%;
   border: 0.1px solid #939393;
