--- a/FrontEnd/railridebmx-frontend/src/Components/Cart/Cart.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Cart/Cart.css
@@ -13,14 +13,14 @@
   line-height: normal;
   display: flex;
   justify-content: left;
-  margin: 0 28%;
+  margin: 0 20%;
   margin-top: 37px;
   padding-top: 50px;
 }
 .cartSection {
   display: flex;
   flex-wrap: nowrap;
-  margin: 25px 28%;
+  margin: 25px 20%;
 }
 .allProduct {
   display: flex;
@@ -156,9 +156,27 @@
   margin-bottom: 5px;
 }
 .cart-hr {
-  margin-left: 28%;
+  margin-left: 20%;
   margin-right: 40%;
   border: 0.1px solid #939393;
   border-radius: 5%;
   height: 0.1px;
+}
+.deleteButton{
+  display: flex;
+  height: 30px;
+  margin: 0 20px;
+  margin-top: 5px;
+  padding: 5px 5px;
+  flex-shrink: 0;
+  border: 1px solid #E6E6E9;
+  background: #333533;
+  color: #FFF;
+  text-align: center;
+  font-family: "Font/Heebo-Black.ttf", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  cursor: pointer;
 }
