--- a/FrontEnd/railridebmx-frontend/src/Components/Comment/Comment.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Comment/Comment.css
@@ -2,33 +2,39 @@
 .comment-item {
     position: relative;
 }
-
+.comment-options{
+    display: flex;
+    justify-content: center;
+    align-items: self-start;
+    margin-left: 10px;
+}
 .comment-options .options-toggle {
     background: none;
     border: none;
     cursor: pointer;
+    font-size: 25px;
 }
 
 .options-menu {
-    display: none;
-    position: absolute;
+    display: block;
     right: 0;
     z-index: 1;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
 }
-
-.comment-options:hover .options-menu {
-    display: block;
-}
-
 .options-menu button {
-    background: none;
-    border: none;
+    margin-top: 5px;
+    padding: 5px 5px;
+    flex-shrink: 0;
+    border: 1px solid #E6E6E9;
+    background: #333533;
+    color: #FFF;
+    text-align: center;
+    font-family: "Font/Heebo-Black.ttf", sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     cursor: pointer;
-    display: block;
-    text-align: left;
+    margin-bottom: 30px;
 }
 .ReactModal__Overlay {
     position: fixed;
