--- a/FrontEnd/railridebmx-frontend/src/Components/Product/CreateProduct/CreateProduct.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Product/CreateProduct/CreateProduct.css
@@ -10,6 +10,7 @@
     border: 1px solid #939393;
     background: rgba(235, 235, 235, 0.60);
     width: 40%;
+    margin-bottom: 100px;
 }
 .create-field-Text{
     margin-top: 20px;
