--- a/FrontEnd/railridebmx-frontend/src/Components/Product/ListProduct/Product.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Product/ListProduct/Product.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+.productCss-container{
+  display: flex;
+  flex-flow: row nowrap;
+  margin: 0 240px;
+  gap: 50px;
+}
 .title {
   color: #000;
   font-family: "Font/Heebo-Black.ttf", sans-serif;
@@ -17,10 +23,10 @@
 .productSection {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 25%;
+  gap: 20px;
+
 }
 .productList {
-  margin: 2%;
   text-decoration: none;
 }
 .productList .product-productImage {
@@ -67,4 +73,14 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+.filter-Container{
+  display: flex;
+  flex-flow: column nowrap;
+}
+.filter-Container-border{
+  border: 2px solid #E6E6E9;
+  background: #FFF;
+  padding: 10px;
+
 }
