--- a/FrontEnd/railridebmx-frontend/src/Components/Product/ProductInDetails/ProductDetails.css
+++ b/FrontEnd/railridebmx-frontend/src/Components/Product/ProductInDetails/ProductDetails.css
@@ -213,10 +213,9 @@
   height: 0.1px;
 }
 .comment-contenair{
-  margin: 0 28%;
+  margin-left: 28%;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .product-AddCartButton{
   margin-top: 5px;
@@ -239,4 +238,69 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.comment-form{
+  margin-top: 30px;
+  width: 300px;
+}
+.comment-submit{
+  display: flex;
+  flex-flow: column;
+}
+.comment-title{
+  margin-bottom: 10px;
+  color: #000;
+  font-family: "Font/Heebo-Black.ttf", sans-serif;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.comment-textarea{
+  border: 1px solid #939393;
+  background: #d9d9d9;
+  width: 85%;
+  font-size: 20px;
+  padding-left: 10px;
+}
+.rating-stars{
+  margin-top: 10px;
+  font-size: 20px;
+}
+.comment-submitbutton{
+  margin-top: 5px;
+  padding: 5px 5px;
+  flex-shrink: 0;
+  border: 1px solid #E6E6E9;
+  background: #333533;
+  color: #FFF;
+  text-align: center;
+  font-family: "Font/Heebo-Black.ttf", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.commentList-title{
+  margin-bottom: 10px;
+  color: #000;
+  font-family: "Font/Heebo-Black.ttf", sans-serif;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.comment-item{
+  display: flex;
+  flex-flow: row;
+}
+.comment-item p{
+  color: #000;
+  font-family: "Font/Heebo-Black.ttf", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
